--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#24282D</color>
+    <color name="colorPrimaryDark">#24282D</color>
+    <color name="colorAccent">#AD5C51</color>
+    <color name="colorBackground">#F6F8FA</color>
 </resources>
