--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#AD5C51</color>
     <color name="colorBack">#F6F8FA</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTextGrey">#A9A9A9</color>
+    <color name="colorBlue">#0000EE</color>
 </resources>
