--- a/app/src/main/res/layout/repository_list_item.xml
+++ b/app/src/main/res/layout/repository_list_item.xml
@@ -37,7 +37,6 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="/1AboveAll/MyHero"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorBlue"
             android:textStyle="bold"
@@ -51,8 +50,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="1"
-            android:text="A Simple Hashing Library"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorTextGrey"
             app:layout_constraintStart_toStartOf="@+id/repository_list_item_full_name_text_view"
@@ -65,7 +62,9 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/star_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
@@ -73,7 +72,6 @@
         android:id="@+id/repository_list_item_star_text_view"
         android:layout_width="13dp"
         android:layout_height="18dp"
-        android:text="0"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/colorTextGrey"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
