--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,10 @@
         <item name="windowActionBar">false</item>
 
     </style>
+
+    <style name="AppTheme.SplashActivity">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
 </resources>
